Revision history for Perl module HTML::ParseBrowser

1.08 2014-06-01

    - Recognise BlackBerry 10 and earlier versions. Seems like browser version
      and OS version are the same thing. Requested by Rob Mueller.

1.07 2014-02-04

    - Recognise Internet Explorer 11
    - Recognise Opera 15
    - Added github repo to pod

1.06 2013-04-20

    - Added initial support for getting the OS type and version right
      on iOS and Android
      Nudged by Robert Mueller.

1.05 2012-02-25

    - Fixed some parsing issues related to 'Linux' and made the os
      always report as 'Linux'.
    - Added github repository metadata to Makefile.PL

1.04 2012-01-16

    - Correctly recognise Opera Mini, AOL browser, and Iron
    - Fixed bug where parsing some versions of Windows ended up setting
      the browser version to be the Windows version
    - Konqueror version wasn't being correctly matched in many cases

1.03 2012-01-15

    - Now recognise OmniWeb
    - Added testcases for all recognised languages
    - Language code for Danish was wrong (was 'dn', is now 'da')
    - Language code for Japanese was wrong (was 'jp', is now 'ja')
    - Simplified the language code, which also made it a lot faster.
      Profiling showed that this was really impacting overall performance:
      running the benchmark test from my review previously took ~35s,
      now it takes ~7s.

1.02 2012-01-14

    - Fixed all warnings generated by running a large test corpus past
      the module. The big coverage test for my review article now
      runs cleanly.
    - Tidied up documentation, made it a bit less rude about Vista :-)
    - Hadn't put release date of 1.01 in this file (Changes)
    - Removed version number from README, so I don't have to update it
      on every release

1.01 2012-01-13

    - Fixed handling of Safari version numbers
    - Added tests for IE 8, 9, 10
    - Improved support for Opera including correct handling of version numbers